# securite-python

./: pyproject.toml  shellcode.txt
src/tp1/: __init__.py  __main__.py  analyzer.py  blocker.py  capture.py  cli.py  report.py
src/tp2/: __init__.py  analyzer.py  main.py
src/tp3/: captcha1.py  captcha2.py
